--- a/wiki project/Assignment_final.ipynb
+++ b/wiki project/Assignment_final.ipynb
@@ -15,15 +15,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def link_check(name):\n",
+    "    try:\n",
+    "        film_page = wikipedia.page('{}'.format(name))\n",
+    "        ##film_url = film_page.url\n",
+    "        film_plot = film_page.section('Plot')\n",
+    "        if film_plot == None:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "    except:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "film_check = link_check('the battle of algiers 1967 film')\n",
+    "print(film_check)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def film_data_process(film):\n",
-    "    film_cast = None\n",
-    "    film_release = None\n",
-    "    film_title = None\n",
-    "    film_plot = None\n",
+    "    film_release = ' '\n",
+    "    film_cast = ' '\n",
     "    film_page = wikipedia.page('{}'.format(film))\n",
     "    film_url = film_page.url\n",
     "    film_title = film_page.title\n",
@@ -39,8 +66,22 @@
     "            continue\n",
     "\n",
     "    film_plot = film_page.section('Plot')\n",
+    "    film_data_list = [film_title,film_release,film_cast,film_plot]\n",
     "            \n",
-    "    return [film_title,film_release,film_cast,film_plot]"
+    "    return film_data_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = film_data_process('2001: A Space Odyssey_1968_film')\n",
+    "for i in data:\n",
+    "    print(i)\n",
+    "    print(type(i))\n",
+    "print(type(data))"
    ]
   },
   {
@@ -53,12 +94,13 @@
     "movies_list_df_2 = pd.read_html('http://www.films101.com/t1000r2.htm')\n",
     "movies_list_df_3 = pd.read_html('http://www.films101.com/t1000r3.htm')\n",
     "\n",
+    "\n",
     "def list_construction(mov_list):\n",
     "    movie_list = []\n",
     "    len_list = len(mov_list)\n",
     "    for i in range(1,len_list,2):\n",
     "        for j in range(len(mov_list[i])):\n",
-    "            name = mov_list[i][1][j] + ' ' + str(mov_list[i][2][j]) + ' ' +mov_list[i][3][j]\n",
+    "            name = mov_list[i][1][j] + ' ' + str(mov_list[i][2][j]) +' film'\n",
     "            movie_list.append(name)\n",
     "    return movie_list\n",
     "\n",
@@ -79,7 +121,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(list_movie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ind = 0\n",
+    "for i in range(200):\n",
+    "    if link_check(list_movie[i]):\n",
+    "        ind = ind + 1\n",
+    "        print('The film \"{}\" has index:{}'.format(list_movie[i],ind))\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "film_df = pd.DataFrame(data=None, columns='Movie_Title Release_date Movie_cast Movie_plot'.split())\n",
+    "##film_df\n",
+    "for i in range(len(list_movie)):\n",
+    "    ##print(i)\n",
+    "    if link_check('{}'.format(list_movie[i])):\n",
+    "        film_data_cache = film_data_process('{}'.format(list_movie[i]))\n",
+    "        film_df_2 = pd.DataFrame(data = [film_data_cache], columns='Movie_Title Release_date Movie_cast Movie_plot'.split())\n",
+    "        film_df = pd.concat([film_df,film_df_2]) \n",
+    "    else:\n",
+    "        continue"
+   ]
   }
  ],
  "metadata": {
