--- a/wiki project/final_submission/Assignment_final_test_data_P1.ipynb
+++ b/wiki project/final_submission/Assignment_final_test_data_P1.ipynb
@@ -1673,7 +1673,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "film_df.to_csv('test_data')"
+    "film_df.to_csv('test_data.csv')"
    ]
   },
   {
@@ -1700,7 +1700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
